--- a/client/app/slides/components/slides-presentation/slide-types/right-graph-left-text-slide/right-graph-left-text-slide.component.scss
+++ b/client/app/slides/components/slides-presentation/slide-types/right-graph-left-text-slide/right-graph-left-text-slide.component.scss
@@ -29,11 +29,25 @@
     }
 
     .text-container {
-        align-items: center;
         display: flex;
         height: 100%;
-        padding-left: 20px;
-        padding-right: 10px;
+        padding-left: 10px;
+        padding-right: 20px;
+        position: relative;
+
+        &.alignTop {
+            align-items: none;
+        }
+
+        &.alignMiddle {
+            align-items: center;
+        }
+        &.alignBottom {
+            div:first-child {
+                position: absolute;
+                bottom: 120px;
+            }
+        }
     }
 
     /deep/ app-ng-graph {
